--- a/pagina3.html
+++ b/pagina3.html
@@ -16,11 +16,14 @@
 
 
     <main>
-        <p>No sabien què fer, però finalment van decidir seguir caminant.</p>
-        <p>El llop els va seguir fins a arribar al tren, llavors el llop va marxar a casa seva.</p>
-        <p>Finalment van arribar al final de la ruta i es van dirigir a l'estació de tren per tornar a casa.</p>
+        <div class="DivCenter">
 
-        <img class="Img" src="img/img03.jpg">
+            <p>No sabien què fer, però finalment van decidir seguir caminant.</p>
+            <p>El llop els va seguir fins a arribar al tren, llavors el llop va marxar a casa seva.</p>
+            <p>Finalment van arribar al final de la ruta i es van dirigir a l'estació de tren per tornar a casa.</p>
+
+            <img class="Img" src="img/img03.jpg">
+        </div>
     </main>
 
 
