--- a/pagina4.html
+++ b/pagina4.html
@@ -16,13 +16,17 @@
 
 
     <main>
-        <p>Però quan van arribar a l'estació, van descobrir que havien perdut el tren i que haurien de esperar una hora
-            fins que</p>
-        <p>arribés el següent.</p>
-        <p>Per no perdre el temps, la <b class="StyleMama">mama</b> i <b class="StyleAleix">l'Aleix</b> van anar a
-            prendre un cafè.</p>
+        <div class="DivCenter">
 
-        <img class="Img" src="img/img04.jpg">
+            <p>Però quan van arribar a l'estació, van descobrir que havien perdut el tren i que haurien de esperar una
+                hora
+                fins que</p>
+            <p>arribés el següent.</p>
+            <p>Per no perdre el temps, la <b class="StyleMama">mama</b> i <b class="StyleAleix">l'Aleix</b> van anar a
+                prendre un cafè.</p>
+
+            <img class="Img" src="img/img04.jpg">
+        </div>
     </main>
 
 
