Centrar de una manera mas controlable

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYpE html>
-<html>
+<html class="DivCenter">
 
 <head>
     <link rel="stylesheet" href="styel.css">
@@ -16,9 +16,13 @@
 
 
     <main>
+
+
         <h1 class="Blau">El Compte de la Muntanya De La Mama i l'Aleix</h1>
 
         <img class="Img" src="img/img00.jpg">
+
+
     </main>
 
 
