--- a/pagina1.html
+++ b/pagina1.html
@@ -1,5 +1,5 @@
 <!DOCTYpE html>
-<html>
+<html class="DivCenter">
 
 <head>
     <link rel="stylesheet" href="styel.css">
@@ -16,14 +16,14 @@
 
 
     <main>
-        <div class="DivCenter">
-            <p>La <b class="StyleMama">mama</b> i <b class="StyleAleix">l'Aleix</b> havien decidit passar un dia a la
-                muntanya per fer una ruta i gaudir de la natura.
-            </p>
-            <p>Tot va començar bé, però a mitja ruta van acabar perdent-se sense adonar-se'n.</p>
-            <p> Van començar a caminar per diferents camins sense saber si estaven en la direcció correcta.</p>
 
-            <img src="img/img01.jpg">
+        <p>La <b class="StyleMama">mama</b> i <b class="StyleAleix">l'Aleix</b> havien decidit passar un dia a la
+            muntanya per fer una ruta i gaudir de la natura.
+        </p>
+        <p>Tot va començar bé, però a mitja ruta van acabar perdent-se sense adonar-se'n.</p>
+        <p> Van començar a caminar per diferents camins sense saber si estaven en la direcció correcta.</p>
+
+        <img src="img/img01.jpg">
         </div>
 
     </main>
