--- a/pagina4.html
+++ b/pagina4.html
@@ -1,5 +1,5 @@
 <!DOCTYpE html>
-<html>
+<html class="DivCenter">
 
 <head>
     <link rel="stylesheet" href="styel.css">
@@ -16,16 +16,16 @@
 
 
     <main>
-        <div class="DivCenter">
 
-            <p>Però quan van arribar a l'estació, van descobrir que havien perdut el tren i que haurien de esperar una
-                hora
-                fins que</p>
-            <p>arribés el següent.</p>
-            <p>Per no perdre el temps, la <b class="StyleMama">mama</b> i <b class="StyleAleix">l'Aleix</b> van anar a
-                prendre un cafè.</p>
 
-            <img class="Img" src="img/img04.jpg">
+        <p>Però quan van arribar a l'estació, van descobrir que havien perdut el tren i que haurien de esperar una
+            hora
+            fins que</p>
+        <p>arribés el següent.</p>
+        <p>Per no perdre el temps, la <b class="StyleMama">mama</b> i <b class="StyleAleix">l'Aleix</b> van anar a
+            prendre un cafè.</p>
+
+        <img class="Img" src="img/img04.jpg">
         </div>
     </main>
 
