--- a/pagina5.html
+++ b/pagina5.html
@@ -1,5 +1,5 @@
 <!DOCTYpE html>
-<html>
+<html class="DivCenter">
 
 <head>
     <link rel="stylesheet" href="styel.css">
@@ -16,20 +16,20 @@
 
 
     <main>
-        <div class="DivCenter">
 
-            <p>Quan finalment va arribar el tren, van agafar-ho per els pèls, gairebé perdent-lo de nou.</p>
-            <p> Van arribar a casa amb el papa sense més incidents, però amb una gran aventura per explicar.</p>
-            <p> Al final, la <b class="StyleMama">mama</b> i <b class="StyleAleix">l'Aleix</b> van tornar a casa amb
-                moltes
-                ganes de compartir la seva aventura amb el papa.
-            </p>
-            <p> Van explicar-li amb detall tot el que havia passat i el papa es va sorprendre molt.</p>
-            <p>Tots junts van passar la nit rememorant els moments viscuts i, a partir d'aquell dia, la <b
-                    class="StyleMama">mama</b> i <b class="StyleAleix">l'Aleix</b> van
-                compartir una nova passió per la natura i les aventures que podien viure junts.</p>
 
-            <img class="Img" src="img/img05.jpg">
+        <p>Quan finalment va arribar el tren, van agafar-ho per els pèls, gairebé perdent-lo de nou.</p>
+        <p> Van arribar a casa amb el papa sense més incidents, però amb una gran aventura per explicar.</p>
+        <p> Al final, la <b class="StyleMama">mama</b> i <b class="StyleAleix">l'Aleix</b> van tornar a casa amb
+            moltes
+            ganes de compartir la seva aventura amb el papa.
+        </p>
+        <p> Van explicar-li amb detall tot el que havia passat i el papa es va sorprendre molt.</p>
+        <p>Tots junts van passar la nit rememorant els moments viscuts i, a partir d'aquell dia, la <b
+                class="StyleMama">mama</b> i <b class="StyleAleix">l'Aleix</b> van
+            compartir una nova passió per la natura i les aventures que podien viure junts.</p>
+
+        <img class="Img" src="img/img05.jpg">
         </div>
     </main>
 
