--- a/pagina2.html
+++ b/pagina2.html
@@ -1,5 +1,5 @@
 <!DOCTYpE html>
-<html>
+<html class="DivCenter">
 
 <head>
     <link rel="stylesheet" href="styel.css">
@@ -16,15 +16,15 @@
 
 
     <main>
-        <div class="DivCenter">
-
-            <p>Mentre caminaven, van creuar un camí en el qual van trobar un llop que estava udolant molt fort.</p>
-            <p> La <b class="StyleMama">mama</b> i <b class="StyleAleix">l'Aleix</b>, que no tenien por, van decidir
-                respondre a l'udol del llop.</p>
-            <p> Amb gran sorpresa seva, el llop va començar a seguir-los.</p>
 
 
-            <img class="Img" src="img/img02.jpg">
+        <p>Mentre caminaven, van creuar un camí en el qual van trobar un llop que estava udolant molt fort.</p>
+        <p> La <b class="StyleMama">mama</b> i <b class="StyleAleix">l'Aleix</b>, que no tenien por, van decidir
+            respondre a l'udol del llop.</p>
+        <p> Amb gran sorpresa seva, el llop va començar a seguir-los.</p>
+
+
+        <img class="Img" src="img/img02.jpg">
         </div>
     </main>
 
