Cambiar boton , fondo ,imagenes i acer el tamanyo de las imagenes

--- a/pagina1.html
+++ b/pagina1.html
@@ -1,5 +1,5 @@
 <!DOCTYpE html>
-<html class="DivCenter">
+<html class="DivCenter BackRojo">
 
 <head>
     <link rel="stylesheet" href="styel.css">
@@ -23,7 +23,7 @@
         <p>Tot va començar bé, però a mitja ruta van acabar perdent-se sense adonar-se'n.</p>
         <p> Van començar a caminar per diferents camins sense saber si estaven en la direcció correcta.</p>
 
-        <img src="img/img01.jpg">
+        <img class="Imagenes " src="img/img01.jpg">
         </div>
 
     </main>
@@ -31,7 +31,7 @@
 
     <footer>
         <br><br><br><br>
-        <button><a
+        <button class="button-63" role="button"><a
                 href="C:/Users/Aleix.DESKTOP-1QME0I4/Searches/Documents/Proyectos/conte-dia-mare-2023/pagina2.html">Pagina2</a></button>
     </footer>
 </body>
