--- a/pagina2.html
+++ b/pagina2.html
@@ -1,5 +1,5 @@
 <!DOCTYpE html>
-<html class="DivCenter">
+<html class="DivCenter BackRojo">
 
 <head>
     <link rel="stylesheet" href="styel.css">
@@ -24,14 +24,14 @@
         <p> Amb gran sorpresa seva, el llop va començar a seguir-los.</p>
 
 
-        <img class="Img" src="img/img02.jpg">
+        <img class="Imagenes " src="img/img02.jpg">
         </div>
     </main>
 
 
     <footer>
         <br><br><br><br><br>
-        <button><a
+        <button class="button-63" role="button"><a
                 href="C:/Users/Aleix.DESKTOP-1QME0I4/Searches/Documents/Proyectos/conte-dia-mare-2023/pagina3.html">Pagina3</a></button>
     </footer>
 </body>
