--- a/pagina3.html
+++ b/pagina3.html
@@ -22,14 +22,14 @@
         <p>El llop els va seguir fins a arribar al tren, llavors el llop va marxar a casa seva.</p>
         <p>Finalment van arribar al final de la ruta i es van dirigir a l'estació de tren per tornar a casa.</p>
 
-        <img class="Img" src="img/img03.jpg">
+        <img class="Imagenes " src="img/img03.jpg">
         </div>
     </main>
 
 
     <footer>
         <br><br><br><br><br>
-        <button><a
+        <button class="button-63" role="button"><a
                 href="C:/Users/Aleix.DESKTOP-1QME0I4/Searches/Documents/Proyectos/conte-dia-mare-2023/pagina4.html">Pagina4</a></button>
     </footer>
 </body>
