--- a/pagina4.html
+++ b/pagina4.html
@@ -25,14 +25,14 @@
         <p>Per no perdre el temps, la <b class="StyleMama">mama</b> i <b class="StyleAleix">l'Aleix</b> van anar a
             prendre un cafè.</p>
 
-        <img class="Img" src="img/img04.jpg">
+        <img class="Imagenes " src="img/img04.jpg">
         </div>
     </main>
 
 
     <footer>
         <br><br><br><br><br>
-        <button><a
+        <button class="button-63" role="button"><a
                 href="C:/Users/Aleix.DESKTOP-1QME0I4/Searches/Documents/Proyectos/conte-dia-mare-2023/pagina5.html">Pagina5</a></button>
     </footer>
 </body>
