--- a/pagina5.html
+++ b/pagina5.html
@@ -29,14 +29,14 @@
                 class="StyleMama">mama</b> i <b class="StyleAleix">l'Aleix</b> van
             compartir una nova passió per la natura i les aventures que podien viure junts.</p>
 
-        <img class="Img" src="img/img05.jpg">
+        <img class="Imagenes " src="img/img05.jpg">
         </div>
     </main>
 
 
     <footer>
         <br><br><br><br><br>
-        <button><a
+        <button class="button-63" role="button"><a
                 href="C:/Users/Aleix.DESKTOP-1QME0I4/Searches/Documents/Proyectos/conte-dia-mare-2023/index.html">Index</a></button>
     </footer>
 </body>
