--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </title>
 </head>
 
-<body>
+<body class="BackRojo">
     <header>
 
     </header>
@@ -20,7 +20,7 @@
 
         <h1 class="Blau">El Compte de la Muntanya De La Mama i l'Aleix</h1>
 
-        <img class="Img" src="img/img00.jpg">
+        <img class="Imagenes" src="img/img00.jpg">
 
 
     </main>
@@ -28,8 +28,10 @@
 
     <footer>
         <br><br><br><br><br>
-        <button><a
-                href="C:/Users/Aleix.DESKTOP-1QME0I4/Searches/Documents/Proyectos/conte-dia-mare-2023/pagina1.html">Pagina1</a></button>
+        <button class="button-63" role="button">
+            <a
+                href="C:/Users/Aleix.DESKTOP-1QME0I4/Searches/Documents/Proyectos/conte-dia-mare-2023/pagina1.html">Pagina1</a>
+        </button>
     </footer>
 </body>
 
