coregir los iper vinculos

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
     <footer>
         <br><br><br><br><br>
         <button class="button-63" role="button">
-            <a
-                href="C:/Users/Aleix.DESKTOP-1QME0I4/Searches/Documents/Proyectos/conte-dia-mare-2023/pagina1.html">Pagina1</a>
+            <a href="pagina1.html">Pagina1</a>
         </button>
     </footer>
 </body>
