--- a/pagina1.html
+++ b/pagina1.html
@@ -31,8 +31,7 @@
 
     <footer>
         <br><br><br><br>
-        <button class="button-63" role="button"><a
-                href="C:/Users/Aleix.DESKTOP-1QME0I4/Searches/Documents/Proyectos/conte-dia-mare-2023/pagina2.html">Pagina2</a></button>
+        <button class="button-63" role="button"><a href="pagina2.html">Pagina2</a></button>
     </footer>
 </body>
 
