--- a/pagina3.html
+++ b/pagina3.html
@@ -29,8 +29,7 @@
 
     <footer>
         <br><br><br><br><br>
-        <button class="button-63" role="button"><a
-                href="C:/Users/Aleix.DESKTOP-1QME0I4/Searches/Documents/Proyectos/conte-dia-mare-2023/pagina4.html">Pagina4</a></button>
+        <button class="button-63" role="button"><a href="pagina4.html">Pagina4</a></button>
     </footer>
 </body>
 
