--- a/pagina4.html
+++ b/pagina4.html
@@ -32,8 +32,7 @@
 
     <footer>
         <br><br><br><br><br>
-        <button class="button-63" role="button"><a
-                href="C:/Users/Aleix.DESKTOP-1QME0I4/Searches/Documents/Proyectos/conte-dia-mare-2023/pagina5.html">Pagina5</a></button>
+        <button class="button-63" role="button"><a href="pagina5.html">Pagina5</a></button>
     </footer>
 </body>
 
