--- a/pagina5.html
+++ b/pagina5.html
@@ -36,8 +36,7 @@
 
     <footer>
         <br><br><br><br><br>
-        <button class="button-63" role="button"><a
-                href="C:/Users/Aleix.DESKTOP-1QME0I4/Searches/Documents/Proyectos/conte-dia-mare-2023/index.html">Index</a></button>
+        <button class="button-63" role="button"><a href="index.html">Index</a></button>
     </footer>
 </body>
 
