Acer que se pueda apretar en cualcier sitio del boton para cambiar de pagina eliminando el boton

--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
 
     <footer>
         <br><br><br><br><br>
-        <button class="button-63" role="button">
-            <a href="pagina1.html">Pagina1</a>
-        </button>
+        <a class="button-63" role="button" href="pagina1.html">Pagina1</a>
     </footer>
 </body>
 
