--- a/pagina1.html
+++ b/pagina1.html
@@ -31,7 +31,7 @@
 
     <footer>
         <br><br><br><br>
-        <button class="button-63" role="button"><a href="pagina2.html">Pagina2</a></button>
+        <a class="button-63" role="button" href="pagina2.html">Pagina2</a>
     </footer>
 </body>
 
