--- a/pagina3.html
+++ b/pagina3.html
@@ -29,7 +29,7 @@
 
     <footer>
         <br><br><br><br><br>
-        <button class="button-63" role="button"><a href="pagina4.html">Pagina4</a></button>
+        <a class="button-63" role="button" href="pagina4.html">Pagina4</a>
     </footer>
 </body>
 
