--- a/pagina4.html
+++ b/pagina4.html
@@ -32,7 +32,7 @@
 
     <footer>
         <br><br><br><br><br>
-        <button class="button-63" role="button"><a href="pagina5.html">Pagina5</a></button>
+        <a class="button-63" role="button" href="pagina5.html">Pagina5</a>
     </footer>
 </body>
 
