--- a/pagina5.html
+++ b/pagina5.html
@@ -36,7 +36,7 @@
 
     <footer>
         <br><br><br><br><br>
-        <button class="button-63" role="button"><a href="index.html">Index</a></button>
+        <a class="button-63" role="button" href="index.html">Index</a>
     </footer>
 </body>
 
