--- a/pagina2.html
+++ b/pagina2.html
@@ -31,7 +31,7 @@
 
     <footer>
         <br><br><br><br><br>
-        <button class="button-63" role="button"><a href="pagina3.html">Pagina3</a></button>
+        <a class="button-63" role="button" href="pagina3.html">Pagina3</a>
     </footer>
 </body>
 
